--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
 }
 
 .loading {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
